# WorldModel-Gym

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml  render.yaml  requirements-dev.txt  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  lighthouse.yml  paper.yml  production-smoke.yml  supply-chain.yml
agents/: pyproject.toml
agents/worldmodel_agents/: __init__.py  base.py  imagination_mpc.py  oracle_agent.py  ppo_agent.py  random_agent.py  registry.py  search_mcts.py
core/: pyproject.toml
core/worldmodel_gym/envs/: __init__.py  base.py  craft_lite.py  memory_maze.py  registry.py  switch_quest.py
core/worldmodel_gym/eval/: continual.py  harness.py  metrics.py  run.py  seeds.py
core/worldmodel_gym/interfaces/: __init__.py  world_model.py
core/worldmodel_gym/trace/: schema.py
docker/: server.Dockerfile  web.Dockerfile  web.fly.Dockerfile  worker.Dockerfile
docs/: AGENT_API.md  ARCHITECTURE.md  BENCHMARK_SPECS.md  DEPLOYMENT.md  ETHICS.md  LOGBOOK.md  OBSERVABILITY.md  OPERATIONS.md  RELEASES.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
fly/: api.fly.toml.tmpl  web.fly.toml.tmpl
mobile/: App.tsx  app.json  package-lock.json  package.json
paper/: Makefile  README.md  build_paper_fallback.py  refs.bib  worldmodelgym.tex
planners/: pyproject.toml
planners/worldmodel_planners/: __init__.py  base.py  mcts.py  mpc_cem.py  trajectory_sampling.py
scripts/: demo_run.py  deploy_fly.sh  deploy_local.sh  deploy_public.sh  deploy_vercel.sh  stop_local.sh  stop_public.sh  verify_deployment.py
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260328_01_initial_schema.py  20260415_01_run_ranking_columns.py  20260420_01_normalize_artifact_keys.py  20260425_01_api_key_expiry.py  20260430_01_run_eval_budget.py  20260505_01_provenance_and_idempotency.py
server/worldmodel_server/: auth.py  cli.py  config.py  db.py  errors.py  idempotency.py  main.py  migrations.py  models.py  otel.py  rate_limit.py  request_logging.py  runner.py  schemas.py  seed.py  storage.py  validation.py  worker.py
tests/: conftest.py  test_agent_registry.py  test_api_contract.py  test_api_key_lifecycle.py  test_cli_api_keys.py  test_continual.py  test_env_determinism.py  test_errors.py  test_eval_harness.py  test_eval_metrics_schema.py  test_harness_e2e.py  test_idempotency_store.py  test_migrations.py  test_otel.py  test_pagination.py  test_planner_budget.py  test_queue.py  test_rate_limit.py  test_server_app.py  test_server_security.py  test_server_storage.py  test_validation.py  test_worldmodels.py
web/: .eslintignore  lighthouserc.json  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
web/app/: apple-icon.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
worldmodels/: pyproject.toml
worldmodels/worldmodel_models/: __init__.py  common.py  deterministic.py  ensemble.py  registry.py  stochastic.py
(+100 files in other folders)
