[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldmodel-gym-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.4",
  "torch>=2.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worldmodel_agents*"]
