[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldmodel-gym-core"
version = "0.1.0"
description = "Core benchmark package for WorldModel Gym"
requires-python = ">=3.11"
dependencies = [
  "gymnasium>=0.29.1",
  "numpy>=1.26.4",
  "pydantic>=2.10.3",
  "pyyaml>=6.0.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["worldmodel_gym*"]
