[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldmodel-gym-models"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["torch>=2.3.1", "numpy>=2.4.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["worldmodel_models*"]
